# pipelines

./: .bazelrc.travis  .cloudbuild.yaml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yaml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .release.cloudbuild.yaml  .style.yapf  .syft.yaml  .travis.yml  ADOPTERS.md  AGENTS.md  AUTHORS  BUG_FIX_SUMMARY.md  BUILD.bazel  CHANGELOG.md  CHANGES_TO_REVIEW.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.release  Gopkg.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_PROGRESS.md  Makefile  Makefile.setup.mk  OWNERS  PERFORMANCE_OPTIMIZATION_ROLLBACK.md  POD_STATUS_CHANGES.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  (+112 more)
api/v2alpha1/: BUILD.bazel  cache_key.proto  pipeline_spec.proto
api/v2alpha1/go/: cache_key.pb.go  pipeline_spec.pb.go
api/v2alpha1/python/: MANIFEST.in  generate_proto.py  pyproject.toml  requirements.in  requirements.txt  setup.py
backend/: Dockerfile  Dockerfile.arm64base  Dockerfile.bazel  Dockerfile.buildapi  Dockerfile.cacheserver  Dockerfile.conformance  Dockerfile.debug.kfp  Dockerfile.driver  Dockerfile.driver.debug.kfp  Dockerfile.executioncache  Dockerfile.launcher  Dockerfile.persistenceagent  Dockerfile.pipelines-profile-controller  Dockerfile.scheduledworkflow  Dockerfile.scheduler  Dockerfile.test-dlv  Dockerfile.viewercontroller  Dockerfile.visualization  Dockerfile.visualizations  Makefile  OWNERS  README.md  build_api_server.sh  requirements.in  requirements.txt  run_test_compile.py  update_requirements.sh
backend/api/: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  auth.proto  build_kfp_server_api_python_package.sh  error.pb.go  error.proto  experiment.proto  filter.proto  generate_api.sh  generate_api_v2.sh  generator.sh  healthz.proto  job.pb.go  job.pb.gw.go  job.proto  job.swagger.json  job_v1alpha2.pb.go  job_v1alpha2.pb.gw.go  job_v1alpha2.proto  kfp_api.html  package.pb.go  package.pb.gw.go  package.proto  package.swagger.json  parameter.pb.go  parameter.proto  pipeline.pb.go  pipeline.pb.gw.go  pipeline.proto  pipeline.swagger.json  pipeline_spec.proto  pipeline_v1alpha2.pb.go  pipeline_v1alpha2.pb.gw.go  pipeline_v1alpha2.proto  report.pb.go  report.pb.gw.go  report.proto  (+11 more)
backend/api/go_client/: BUILD.bazel  auth.pb.go  auth.pb.gw.go  auth_grpc.pb.go  error.pb.go  error.pb.gw.go  experiment.pb.go  experiment.pb.gw.go  experiment_grpc.pb.go  filter.pb.go  filter.pb.gw.go  filter_grpc.pb.go  healthz.pb.go  healthz.pb.gw.go  healthz_grpc.pb.go  job.pb.go  job.pb.gw.go  job_grpc.pb.go  parameter.pb.go  pipeline.pb.go  pipeline.pb.gw.go  pipeline_grpc.pb.go  pipeline_spec.pb.go  report.pb.go  report.pb.gw.go  report_grpc.pb.go  resource_reference.pb.go  resource_reference.pb.gw.go  run.pb.go  run.pb.gw.go  run_grpc.pb.go  task.pb.go  task.pb.gw.go  visualization.pb.go  visualization.pb.gw.go  visualization_grpc.pb.go
backend/api/hack/: generator.sh
backend/api/job_client/: job_client.go
backend/api/job_model/: api_cron_schedule.go  api_job.go  api_job_detail.go  api_list_job_runs_response.go  api_list_runs_response.go  api_periodic_schedule.go  api_run.go  api_trigger.go  protobuf_any.go  protobuf_empty.go
backend/api/package_client/: package_client.go
backend/api/package_model/: api_get_template_response.go  api_list_packages_response.go  api_package.go  api_parameter.go  api_status.go  protobuf_any.go  protobuf_empty.go
backend/api/pipeline_client/: pipeline_client.go
backend/api/pipeline_model/: api_cron_schedule.go  api_list_pipelines_response.go  api_periodic_schedule.go  api_pipeline.go  api_status.go  api_trigger.go  protobuf_any.go  protobuf_empty.go
backend/api/python_client_template/: setup.mustache
backend/api/python_http_client/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  setup.py
backend/api/python_http_client_template/: README.md  api.mustache
backend/api/run_client/: run_client.go
backend/api/run_model/: api_list_runs_response.go  api_run.go  api_run_detail.go
backend/api/swagger/: auth.swagger.json  error.swagger.json  experiment.swagger.json  filter.swagger.json  (+13 more)
backend/conformance/: run.sh
backend/execution_cache/: Dockerfile  README.md  dep.txt  go.mod  go.sum  license.txt  license_info.csv  repo.txt
backend/integration-real/: pipeline_api_test.go
backend/metadata_writer/: Dockerfile  OWNERS  README.md  metadata_writer.deployment.yaml  requirements.in  requirements.txt  update_requirements.sh
backend/scripts/: start-dev-db.sh  stop-dev-db.sh
backend/src/: Dockerfile  Dockerfile.scheduler
backend/test/: .env  BUILD.bazel  Dockerfile.test  cli_test.go  experiment_api_test.go  import_pipeline_test.go  job_api_test.go  list_all_runs_test.go  one_time_pipeline_test.go  pagination_test.go  pipeline_api_test.go  run_api_test.go  test-run.sh  test_utils.go
backend/third_party_licenses/: apiserver.csv  cache_server.csv  driver.csv  launcher.csv  persistence_agent.csv  swf.csv  viewer.csv
kubernetes_platform/python/: MANIFEST.in  README.md  RELEASE.md  create_release_branch.sh  generate_proto.py  pre-release-requirements-update.sh  pyproject.toml  release.sh  requirements-dev.txt  requirements.in  requirements.txt  setup.py
release/: Dockerfile.release  OWNERS  README.md  RELEASE.md  pyproject.toml  tag_for_hosted.sh
release/kfpr/: __init__.py  cli.py  cli_test.py  core.py  core_test.py  rtd.py  rtd_test.py  steps.py  steps_test.py
sdk/python/: 0.2.5  MANIFEST.in  Makefile  README.md  TROUBLESHOOTING.md  add_two_numbers_indented.component.yaml  build.sh  build_kfp_server_api_package.sh  comp.yaml  condition.pipeline.yaml  f.py  install_editable.sh  install_from_source.sh  install_from_source_editable.sh  local_kfp  pipeline.yaml  pre-release-requirements-update.sh  pyproject.toml  requirements-deprecated.txt  requirements-dev-updated.txt  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  run_tests.sh  setup.py  test_get_logs_functionality.py  test_kfp_platformspec.py  test_kfp_version.py
(+14209 files in other folders)
