[project]
name = "kfp-workspace"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
  "kfp",
  "kfp-pipeline-spec",
  "kfp-server-api",
  "kfp-kubernetes",
]

[tool.uv.workspace]
members = [
  "sdk/python",
  "kubernetes_platform/python",
  "api/v2alpha1/python",
  "backend/api/v2beta1/python_http_client",
]

[tool.uv.sources]
kfp = { workspace = true }
kfp-pipeline-spec = { workspace = true }
kfp-server-api = { workspace = true }
kfp-kubernetes = { workspace = true }

[tool.uv]
# Shared constraints applied during resolution for ALL workspace members
constraint-dependencies = [
  "protobuf>=6.31.1,<7.0",
  "kubernetes>=8.0.0,<31",
  "google-auth>=1.6.1,<3",
  "google-api-core>=1.31.5,<3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0",
  "google-cloud-storage>=2.2.1,<4",
  "PyYAML>=5.3,<7",
  "urllib3<3.0.0",
]

[project.optional-dependencies]
# Linting tools (pinned to avoid new lint failures)
lint = [
  "docformatter==1.4",
  "isort==5.10.1",  "pre-commit-hooks",  "pycln==2.1.1",
  "pylint==2.17.7",
  "yapf==0.43.0",
]

# Testing tools
test = [
  "absl-py",
  "docker",
  "google-cloud-pipeline-components",
  "kubernetes",
  "nbformat",
  "pip",
  "pytest==4.6.11",
  "pytest-cov<3",
  "pytest-lazy-fixture",
  "pytest-mock",
  "pytest-randomly==1.2.3",
  "pytest-xdist",
  "setuptools",
  "wheel",
]

# Development (lint + test + type checking)
dev = [
  "kfp-workspace[lint,test]",
  "mypy",
  "pre-commit",
  "types-protobuf",
  "types-PyYAML",
  "types-requests",
  "types-tabulate",
]

# Documentation building
docs = [
  "autodocsumm",
  "m2r2",
  "sphinx",
  "sphinx-click",
  "sphinx-immaterial>=0.9.0,<1",
  "sphinx-rtd-theme",
]

# CI-specific tools (includes lint, test, and docs)
ci = [
  "kfp-workspace[lint,test,docs]",
  "build",
  "junit2html",
  "requests",
  "ruamel.yaml",
  "twine",
]

# Shared dependency set for non-workspace runtime code paths still modeled by
# requirements-style files.
legacy-shared = [
  "certifi>=14.05.14",
  "future; python_version <= '2.7'",
  "protobuf>=6.33.5,<7.0",
  "python-dateutil>=2.5.3",
  "PyYAML>=5.3,<7",
  "six>=1.10",
  "urllib3>=1.15.1,<3.0.0",
]

# Legacy backend v2 test helpers
backend-v2-test = [
  "fire",
]

# Legacy backend API client test helpers
backend-v1-client-test = [
  "pytest-randomly==1.2.3",
]

# Legacy SageMaker development tools
sagemaker-dev-tools = [
  "black==19.10b0",
  "coverage==5.1",
]

# Legacy SDK deprecated runtime helpers
sdk-deprecated-runtime = [
  "Deprecated>=1.2.7",
  "cloudpickle>=2.0.0",
  "jsonschema>=4.25.1",
  "strip-hints>=0.1.8",
  "typer>=0.3.2",
  "uritemplate>=3.0.1",
]

# Legacy requirement entries that are compatible with the workspace's
# protobuf>=6 dependency floor.
legacy-compatible-runtime = [
  "boto3>=1.14.12,<2",
  "filelock==3.0.*",
  "flake8==3.7.*",
  "flake8-black==0.1.*",
  "kubernetes>=8.0.0,<=31.0.0",
  "lru-dict>=1.1.7,<2.0.0",
  "minio==5.0.10",
  "mypy-extensions==0.4.3",
  "numpy==1.23.1",
  "pathlib2==2.3.5",
  "PyYAML>=5.3,<7",
]

# Runtime dependencies required by backend/metadata_writer.
metadata-writer = [
  "kubernetes>=8.0.0,<=31.0.0",
  "lru-dict>=1.1.7,<2.0.0",
  "PyYAML>=5.3,<7",
]
