load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ml_pipelines_proto",
    srcs = ["pipeline_spec.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

go_proto_library(
    name = "ml_pipelines_go_proto",
    importpath = "github.com/kubeflow/pipelines/api/v2alpha1",
    proto = ":ml_pipelines_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":ml_pipelines_go_proto"],
    importpath = "github.com/kubeflow/pipelines/api/v2alpha1",
    visibility = ["//visibility:public"],
)
