# Copyright 2023 The Kubeflow Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'kfp-kubernetes'
dynamic = ['version']
description = 'Kubernetes platform configuration library and generated protos.'
authors = [
    {name = 'google', email = 'kubeflow-pipelines@google.com'}
]
readme = 'README.md'
requires-python = '>=3.9.0'
license = 'Apache-2.0'
license-files = ['LICENSE']
dependencies = [
    # protobuf version should be identical to the one in kfp-pipeline-spec
    # api/v2alpha1/python/pyroject.toml
    'protobuf==6.31.1,<7.0',
    'kfp>=2.14.6,<3',
]

[project.optional-dependencies]
dev = [
    'docformatter==1.4',
    'isort==5.10.1',
    'mypy==0.941',
    'pre-commit==2.19.0',
    'pycln==2.1.1',
    'pytest==7.1.2',
    'pytest-xdist==2.5.0',
    'yapf==0.43.0',
]

[project.urls]
Github = 'https://github.com/kubeflow/pipelines'
Documentation = 'https://kfp-kubernetes.readthedocs.io/'
'Bug Tracker'= 'https://github.com/kubeflow/pipelines/issues'
Source = 'https://github.com/kubeflow/pipelines/tree/master/kubernetes_platform/python'

[project.scripts]
dsl-compile = 'kfp.cli.compile_:main'
kfp = 'kfp.cli.__main__:main'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['kfp.*']

[tool.setuptools.dynamic]
version = {attr = 'kfp.kubernetes.__init__.__version__'}
