[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp"
version = "0.0.0"
description = "Kubeflow Pipelines SDK"
authors = [{name="Kubeflow Authors"}]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"kfp" = ["registry/context/*.json"]
