load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.pb.go",
        "auth.pb.gw.go",
        "error.pb.go",
        "experiment.pb.go",
        "experiment.pb.gw.go",
        "filter.pb.go",
        "healthz.pb.go",
        "healthz.pb.gw.go",
        "job.pb.go",
        "job.pb.gw.go",
        "parameter.pb.go",
        "pipeline.pb.go",
        "pipeline.pb.gw.go",
        "pipeline_spec.pb.go",
        "report.pb.go",
        "report.pb.gw.go",
        "resource_reference.pb.go",
        "run.pb.go",
        "run.pb.gw.go",
        "visualization.pb.go",
        "visualization.pb.gw.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/api/go_client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-swagger/options:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
