load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client_manager.go",
        "config.go",
        "interceptor.go",
        "main.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/src/apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/api:go_default_library",
        "//backend/src/apiserver/client:go_default_library",
        "//backend/src/apiserver/metadata:go_default_library",
        "//backend/src/apiserver/model:go_default_library",
        "//backend/src/apiserver/resource:go_default_library",
        "//backend/src/apiserver/server:go_default_library",
        "//backend/src/apiserver/storage:go_default_library",
        "//backend/src/common/util:go_default_library",
        "//backend/src/crd/pkg/client/clientset/versioned/typed/scheduledworkflow/v1beta1:go_default_library",
        "@com_github_argoproj_argo//pkg/client/clientset/versioned/typed/workflow/v1alpha1:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/sqlite:go_default_library",
        "@com_github_minio_minio_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@google_ml_metadata//ml_metadata/metadata_store:metadata_store_go",  # keep
        "@google_ml_metadata//ml_metadata/proto:metadata_store_go_proto",  # keep
        "@google_ml_metadata//ml_metadata/proto:metadata_store_service_go_proto",  # keep
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "apiserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
