load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client_manager.go",
        "interceptor.go",
        "main.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/src/apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/api:go_default_library",
        "//backend/src/apiserver/archive:go_default_library",
        "//backend/src/apiserver/client:go_default_library",
        "//backend/src/apiserver/common:go_default_library",
        "//backend/src/apiserver/model:go_default_library",
        "//backend/src/apiserver/resource:go_default_library",
        "//backend/src/apiserver/server:go_default_library",
        "//backend/src/apiserver/storage:go_default_library",
        "//backend/src/common/util:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/sqlite:go_default_library",
        "@com_github_minio_minio_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "apiserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
